Ajustest Iniciais Em Content

--- a/CRUD/frontend/src/app/components/template/header/header.component.html
+++ b/CRUD/frontend/src/app/components/template/header/header.component.html
@@ -8,7 +8,7 @@
     <a>
       <i class="material-icons"> home </i>
 
-      Portal do aluno
+      Portal do aluno de Ciêcias e Tecnologias
     </a>
   </span>
 </mat-toolbar>
