--- a/CRUD/frontend/src/app/views/home/home.component.html
+++ b/CRUD/frontend/src/app/views/home/home.component.html
@@ -1,6 +1,13 @@
-<mat-card>
-  <mat-card-title
-    >Bem vindo!
-    <mat-card-subtitle> exemplo subtitulo </mat-card-subtitle>
-  </mat-card-title>
-</mat-card>
+<form class="example-form">
+  <i class="material-icons"> account_circle </i>
+  <mat-form-field class="inputBox">
+    <mat-label>USUARIO</mat-label>
+    <input matInput value="Digite seu Usuario" />
+  </mat-form-field>
+  <p></p>
+  <i class="material-icons"> lock </i>
+  <mat-form-field class="inputBox">
+    <mat-label>SENHA</mat-label>
+    <input matInput value="Digite sua Senha" />
+  </mat-form-field>
+</form>
