--- a/CRUD/frontend/src/app/components/template/nav/nav.component.html
+++ b/CRUD/frontend/src/app/components/template/nav/nav.component.html
@@ -8,7 +8,7 @@
     fixedTopGap="64"
   >
     <a mat-list-item>
-      <p>Olá, sem bem vindo.</p>
+      <p>Olá, seja bem vindo.</p>
       <p>
         <i>
           Você está em nossa plataforma institucional, onde o login é exclusivo
