--- a/CRUD/frontend/src/app/views/home/home.component.html
+++ b/CRUD/frontend/src/app/views/home/home.component.html
@@ -1,13 +1,19 @@
-<form class="example-form">
+<div class="login">
   <i class="material-icons"> account_circle </i>
   <mat-form-field class="inputBox">
     <mat-label>USUARIO</mat-label>
-    <input matInput value="Digite seu Usuario" />
+    <input matInput />
   </mat-form-field>
   <p></p>
   <i class="material-icons"> lock </i>
   <mat-form-field class="inputBox">
     <mat-label>SENHA</mat-label>
-    <input matInput value="Digite sua Senha" />
+    <input matInput />
   </mat-form-field>
-</form>
+</div>
+
+<span>
+  <button mat-stroked-button color="primary">Login</button>
+  <button mat-stroked-button color="primary">Esqueci minha senha</button>
+  <button mat-stroked-button color="primary">Novo usuário</button>
+</span>
