--- a/CRUD/frontend/src/app/app.component.html
+++ b/CRUD/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header> </app-header>
+<router-outlet>
+  <app-header> </app-header>
 
-<app-nav></app-nav>
+  <app-nav></app-nav>
+</router-outlet>
