--- a/CRUD/frontend/src/app/components/template/nav/nav.component.css
+++ b/CRUD/frontend/src/app/components/template/nav/nav.component.css
@@ -1,6 +1,6 @@
 .sidenav {
   background-color: #b0c4de;
-  width: 300px;
+  width: 15%;
   margin-top: auto;
 }
 
@@ -8,15 +8,13 @@
   text-align: center;
   position: absolute;
   top: 30%;
-  left: 10%;
+  left: 12%;
   right: 10%;
   font-size: medium;
 }
 
 .content {
-  padding: 200px;
-}
-
-.mat-form-field .inputBox {
-  height: 1000px;
+  padding-left: 30%;
+  padding-top: 10%;
+  background-color: white;
 }
