--- a/CRUD/frontend/src/app/views/home/home.component.html
+++ b/CRUD/frontend/src/app/views/home/home.component.html
@@ -12,8 +12,11 @@
   </mat-form-field>
 </div>
 
-<span>
-  <button mat-stroked-button color="primary">Login</button>
+<div>
+  <button mat-stroked-button color="primary" href="https://www.google.com/">
+    Login
+  </button>
   <button mat-stroked-button color="primary">Esqueci minha senha</button>
   <button mat-stroked-button color="primary">Novo usuário</button>
-</span>
+  <a mat-raised-button href="./">Link</a>
+</div>
