colocando a segunda pagina

--- a/CRUD/frontend/src/app/components/template/nav/nav.component.html
+++ b/CRUD/frontend/src/app/components/template/nav/nav.component.html
@@ -18,6 +18,6 @@
     </a>
   </mat-sidenav>
   <mat-sidenav-content class="content">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
